--- a/_posts/2018-08-03-lcs.md
+++ b/_posts/2018-08-03-lcs.md
@@ -1,15 +1,15 @@
 ---
 layout: post
-title: "combination + permutation"
-description: "combination and permutation"
-date: 2018-07-14
+title: "LCS & LIS"
+description: "LCS & LIS algorithm"
+date: 2018-08-03
 tags: [algorithm]
 comments: false
 share: false
 ---
 
-조합과 순열에 대한 소스 코드
-아직 완벽하게 이해한 것은 아니지만, 연습하는 중..
+LCS와 LIS를 정리하기 위한 노트  
+
 
 ---
 
