--- a/_posts/2018-08-19-knapsack.md
+++ b/_posts/2018-08-19-knapsack.md
@@ -1,19 +1,19 @@
 ---
 layout: post
-title: "LCS"
-description: "LCS algorithm"
-date: 2018-08-03
+title: "LIS"
+description: "LIS algorithm"
+date: 2018-08-19
 tags: [algorithm]
 comments: false
 share: false
 ---
 
-LCS를 정리하기 위한 노트  
+LIS를 정리하기 위한 노트  
 
 
 ---
 
-## 1. LCS
+## 1. LIS
 
 ``` cpp
 #include <iostream>
