--- a/_posts/2018-08-19-coin.md
+++ b/_posts/2018-08-19-coin.md
@@ -1,14 +1,14 @@
 ---
 layout: post
-title: "LIS"
-description: "LIS algorithm"
+title: "COIN"
+description: "coin change algorithm"
 date: 2018-08-19
 tags: [algorithm]
 comments: false
 share: false
 ---
 
-LIS를 정리하기 위한 노트  
+coin change 를 정리하기 위한 노트  
 
 
 ---
