--- a/_posts/2018-08-03-lcs.md
+++ b/_posts/2018-08-03-lcs.md
@@ -13,81 +13,130 @@ LCS를 정리하기 위한 노트
 
 ---
 
-## 1. LCS
+## 1. LCS (dp)
 
 ``` cpp
 #include <iostream>
 
-int d[5];
-int arr[5] = {1,2,3,4,5};
-
-void comination(int n, int r, int index, int i)
-{
-  if(index == r) {
-    for(int i = 0; i<r; i++) std::cout<<arr[i]<<' ';
-  }std::cout<<std::endl;
-
-  if(i >= n) return;
-  
-  d[index] = A[i];
-  combi(n,r,index+1, i+1);
-  combi(n,r,index, i+1);
-}
-
 int main()
 {
-  int n = 5;
-  int r = 3;
-  combi(n,r,0,0);
+  std::string s1 = "ACAYKP";
+  std::string s2 = "CAPCAK";
+  
+  int l1 = s1.length();
+  int l2 = s2.length();
+  
+  for(int i = 1; i<=l1; i++){
+    for(int j = 1; j<=l2; j++){
+      if(s1[i-1] == s2[j-1]) {
+        d[i][j]= d[i-1][j-]] + 1;
+      }else{
+        d[i][j] = std::max(d[i-1][j],d[i+1],j);
+      }
+    }
+  }
+  
+  std::cout<<d[l1][l2]<<std::endl;
   return 0;
 }
 ```
 
-## 2. 순열
+## 2. LCS (tracking)
+
+
+``` cpp
+#include <iostream>
+#include <string>
+#include <cstdio>
+
+int d[1001][1001];
+int b[1001][1001];
+
+std::string s1;
+std::string s2;
+std::string s3;
+
+int main()
+{
+  std::cin>>s1>>s2;
+
+  int l1 = s1.length();
+  int l2 = s2.length();
+  int pmax = 0;
+
+  for(int i = 1; i<=l1; i++){
+    for(int j = 1; j<=l2; j++){
+      if(s1[i-1] == s2[j-1]){
+        d[i][j] = d[i-1][j-1] + 1;
+        b[i][j] = 1;
+      }else{
+        d[i][j] = std::max(d[i-1][j], d[i][j-1]);
+
+        if(d[i][j] == d[i-1][j])
+          b[i][j] = 2;
+        else
+          b[i][j] = 3;
+      }
+    }
+  }
+
+  int i = l1;
+  int j = l2;
+
+  while(b[i][j] != 0) {
+
+    if(b[i][j] == 1) {
+      s3.push_back(s1[i-1]);
+        i--;
+        j--;
+      }else if( b[i][j] == 2){
+        i--;
+      }else{
+        j--;
+      }
+    }
+
+  std::cout<<d[l1][l2]<<std::endl;
+  for(int i = s3.length()-1; i>=0; i--){
+    printf("%c",s3[i]);
+  }
+
+  return 0;
+}
+
+```
+
+
+
+## 3. LCS (serial)
 
 
 ``` cpp
 
 #include <iostream>
 
-int A[] = {1,2,3,4,5};
-
-void swap(int a, int b)
-{
-  int t = arr[a];
-  arr[a] = arr[b];
-  arr[b] = t;
-}
-
-bool permutation(int n)
-{
-  int i = n-1;
-  while( i>0 && A[i-1] >= A[i]) i--;
-  
-  if(i <= 0) return false;
-  
-  int j = n-1;
-  while(A[i-1] >=  A[j] ) j--;
-  swap(i-1,j);
-  
-  j = n-1;
-  while(i<j) {
-    swap(i++,j--);
-  }
-  
-  return true;
-}
+int ans;
+int d[4001][4001];
 
 int main()
 {
+  std::string s1 = "ABRACADABRA";
+  std::string s2 = "ECADADABRBCRDARA"
 
-  int n = sizeof(A)/sizeof(A[0]);
+  int l1 = s1.length();
+  int l2 = s2.length();
   
-  do {
-    for(int i = 0; i<n; i++) {
-    	std::cout<<arr[i]<<' ';
-    }std::cout<<std::endl;
-  }while(permutation(n));
+  for(int i = 1; i<=l1; i++){
+    for(int j = 1; j<=l2; j++){ 
+      if(s1[i-1] == s2[j-1]){
+        d[i][j] = d[i-1][j-1] + 1;
+        ans = std::max(ans, d[i][j]);
+      }
+    }
+  }
+  
+  std::cout<<ans<<std::endl;
+
   return 0;
 }
 
