--- a/_posts/2018-08-19-knapsack.md
+++ b/_posts/2018-08-19-knapsack.md
@@ -1,19 +1,19 @@
 ---
 layout: post
-title: "LIS"
-description: "LIS algorithm"
+title: "Knapsack"
+description: "Knapsack algorithm"
 date: 2018-08-19
 tags: [algorithm]
 comments: false
 share: false
 ---
 
-LIS를 정리하기 위한 노트  
+Knapsack 정리하기 위한 노트  
 
 
 ---
 
-## 1. LIS
+## 1. Knapsack 1/0
 
 ``` cpp
 #include <iostream>
