--- a/_posts/2018-08-19-lis.md
+++ b/_posts/2018-08-19-lis.md
@@ -18,78 +18,36 @@ LIS를 정리하기 위한 노트
 ``` cpp
 #include <iostream>
 
-int d[5];
-int arr[5] = {1,2,3,4,5};
-
-void comination(int n, int r, int index, int i)
-{
-  if(index == r) {
-    for(int i = 0; i<r; i++) std::cout<<arr[i]<<' ';
-  }std::cout<<std::endl;
-
-  if(i >= n) return;
-  
-  d[index] = A[i];
-  combi(n,r,index+1, i+1);
-  combi(n,r,index, i+1);
-}
-
-int main()
-{
-  int n = 5;
-  int r = 3;
-  combi(n,r,0,0);
-  return 0;
-}
 ```
 
-## 2. 순열
+## 2. LIS (lower bound)
 
 
 ``` cpp
 
 #include <iostream>
 
-int A[] = {1,2,3,4,5};
 
-void swap(int a, int b)
-{
-  int t = arr[a];
-  arr[a] = arr[b];
-  arr[b] = t;
-}
+```
 
-bool permutation(int n)
-{
-  int i = n-1;
-  while( i>0 && A[i-1] >= A[i]) i--;
-  
-  if(i <= 0) return false;
-  
-  int j = n-1;
-  while(A[i-1] >=  A[j] ) j--;
-  swap(i-1,j);
-  
-  j = n-1;
-  while(i<j) {
-    swap(i++,j--);
-  }
-  
-  return true;
-}
 
-int main()
-{
+## 3. LIS (tracking)
 
-  int n = sizeof(A)/sizeof(A[0]);
-  
-  do {
-    for(int i = 0; i<n; i++) {
-    	std::cout<<arr[i]<<' ';
-    }std::cout<<std::endl;
-  }while(permutation(n));
-  return 0;
-}
+
+``` cpp
+
+#include <iostream>
+
+
+```
+
+
+## 4. LIS (lower bound tracking)
+
+
+``` cpp
+
+#include <iostream>
 
 
 ```
