--- a/_posts/2018-08-19-knapsack.md
+++ b/_posts/2018-08-19-knapsack.md
@@ -18,77 +18,80 @@ Knapsack 정리하기 위한 노트
 ``` cpp
 #include <iostream>
 
-int d[5];
-int arr[5] = {1,2,3,4,5};
+int N,W;
+int ws[1001];
+int ps[1001];
 
-void comination(int n, int r, int index, int i)
+unsigned int dp[10001];
+ 
+int knap(int n, int w)
 {
-  if(index == r) {
-    for(int i = 0; i<r; i++) std::cout<<arr[i]<<' ';
-  }std::cout<<std::endl;
-
-  if(i >= n) return;
-  
-  d[index] = A[i];
-  combi(n,r,index+1, i+1);
-  combi(n,r,index, i+1);
+    for(int i = 1; i<=N; i++){
+         for(int j = W; j >= ws[i]; j--){
+ 
+            dp[j] = std::max(dp[j-ws[i]] + ps[i], dp[j]);
+        }
+    }
+    return 0;
 }
-
+ 
 int main()
 {
-  int n = 5;
-  int r = 3;
-  combi(n,r,0,0);
-  return 0;
+    std::cin>>N>>W;
+
+    for(int i = 1; i<=N; i++){
+        scanf("%d %d",&ws[i],&ps[i]);
+    }
+ 
+    knap(0,0);
+    std::cout<<dp[W]<<std::endl;
+ 
+    return 0;
 }
 ```
 
-## 2. 순열
+## 2. Knapsack 1/0
 
 
 ``` cpp
-
 #include <iostream>
 
-int A[] = {1,2,3,4,5};
+int N,W;
+ 
+int ws[1001];
+int ps[1001];
+ 
+unsigned int dp[1001][10001];
+unsigned int ret;
 
-void swap(int a, int b)
+
+int knap(int n, int w)
 {
-  int t = arr[a];
-  arr[a] = arr[b];
-  arr[b] = t;
+    for(int i = 1; i<=N; i++) {
+        for(int j = 1; j<=W; j++){
+            if(j - ws[i]<0) {
+                dp[i][j] = dp[i-1][j];
+            }else{
+                dp[i][j] = std::max(dp[i-1][j-ws[i]]+ps[i], dp[i-1][j]);
+            }
+        }
+    }
+    return 0;
 }
-
-bool permutation(int n)
-{
-  int i = n-1;
-  while( i>0 && A[i-1] >= A[i]) i--;
-  
-  if(i <= 0) return false;
-  
-  int j = n-1;
-  while(A[i-1] >=  A[j] ) j--;
-  swap(i-1,j);
-  
-  j = n-1;
-  while(i<j) {
-    swap(i++,j--);
-  }
-  
-  return true;
-}
-
+ 
 int main()
 {
+ 
+    std::cin>>N>>W;
+ 
+    for(int i = 1; i<=N; i++){
+        scanf("%d %d",&ws[i],&ps[i]);
+    }
 
-  int n = sizeof(A)/sizeof(A[0]);
-  
-  do {
-    for(int i = 0; i<n; i++) {
-    	std::cout<<arr[i]<<' ';
-    }std::cout<<std::endl;
-  }while(permutation(n));
-  return 0;
+    knap(0,0);
+
+    std::cout<<dp[N][W]<<std::endl; 
+    return 0;
 }
 
 
