--- a/_posts/2018-08-19-lis.md
+++ b/_posts/2018-08-19-lis.md
@@ -17,25 +17,96 @@ LIS를 정리하기 위한 노트
 
 ``` cpp
 #include <iostream>
+#include <cstdio>
 
+using namespace std;
+
+int n;
+int d[1005];
+int a[1005];
+
+int main()
+{
+  int m = 1;
+  std::cin>>n;
+
+  for(int i = 0; i<n; i++) {
+      scanf("%d",&a[i]);
+      d[i] = 1;
+  }
+
+  int m = 1;
+
+  for(int i = 1; i<n; i++){
+    for(int j = 0; j<i; j++){
+      if(a[i] > a[j] && (d[i] < d[j]+1)) {
+        d[i] = d[j]+1;
+          if(d[i] > m) m = d[i];
+      }
+    }
+  }
+
+  cout<<m<<endl;
+  return 0;
+}
 ```
 
 ## 2. LIS (lower bound)
 
 
 ``` cpp
-
 #include <iostream>
+#include <cstdio>
 
+using namespace std;
+
+int n;
+int a[100001];
+int d[100001];
+
+int lower_bound(int end, int t)
+{
+    int mid = 0;
+    int start = 0;
+
+    while(start < end) {
+        mid  = (start + end) /2;
+        
+        if(d[mid] < t) start = mid + 1;
+        else end = mid; 
+    }
+    return end;
+}
+
+int main()
+{
+    cin>>n;
+    for(int i = 0; i<n; i++){
+        scanf("%d",&a[i]);
+    }
+
+    int idx = 0;
+    d[idx] = a[0];
+
+    for(int i = 1; i<n; i++) {
+        if(d[idx] < a[i]) {
+            d[++idx] = a[i];
+        }else{
+            int np = lower_bound(idx,a[i]);
+            d[np] = a[i];
+        }
+    }
+
+    cout<< idx + 1<<endl;
+    return 0;
+}
 
 ```
 
 
 ## 3. LIS (tracking)
 
-
 ``` cpp
-
 #include <iostream>
 
 
@@ -46,7 +117,6 @@ LIS를 정리하기 위한 노트
 
 
 ``` cpp
-
 #include <iostream>
 
 
