--- a/_posts/2018-08-19-coin.md
+++ b/_posts/2018-08-19-coin.md
@@ -13,33 +13,40 @@ coin change 를 정리하기 위한 노트
 
 ---
 
-## 1. LIS
+## 1. COIN
 
 ``` cpp
 #include <iostream>
-
-int d[5];
-int arr[5] = {1,2,3,4,5};
-
-void comination(int n, int r, int index, int i)
-{
-  if(index == r) {
-    for(int i = 0; i<r; i++) std::cout<<arr[i]<<' ';
-  }std::cout<<std::endl;
-
-  if(i >= n) return;
-  
-  d[index] = A[i];
-  combi(n,r,index+1, i+1);
-  combi(n,r,index, i+1);
-}
-
+#include <cstdio>
+ 
+int a[11];
+int d[64001];
+ 
+int n,k;
+ 
 int main()
 {
-  int n = 5;
-  int r = 3;
-  combi(n,r,0,0);
-  return 0;
+    std::cin>>n;
+ 
+    for(int i = 0; i<n; i++){
+        std::cin>>a[i];
+    }
+ 
+    std::cin>>k;
+ 
+    for(int i = 1; i<=k; i++){
+        d[i] = 987654321;
+    }
+  
+    for(int i = 0; i<n; i++){
+        for(int j = a[i]; j<=k; j++){
+            d[j] = std::min(d[j], d[j - a[i]] +1);
+        }
+    }
+ 
+    if(d[k] == 987654321) std::cout<<"impossible"<<std::endl;
+    else std::cout<<d[k]<<std::endl;
+    return 0;
 }
 ```
 
