--- a/_posts/2018-09-06-socket2.md
+++ b/_posts/2018-09-06-socket2.md
@@ -39,7 +39,8 @@ struct aockaddr {
 bind(serv_sock, (struct sockaddr*) &serv_addr, sizeof(serv_addr));
 
 // 2nd parameter, serv_addr(sock_addr_in) is type casted to sockaddr
-// bind funtion 2nd param require sa_data[14] with port number and ip address. But it is not convenient to fill with these information
+// bind funtion 2nd param require sa_data[14] with port number and ip address.
+//But it is not convenient to fill with these information
 // so we use sockaddr_in for fill it.
 // sin_port(2 byte) + sin_addr(4bypte) = 6 byte. sin_zero is 8 byte. sum of those is 14 byte, it is the same with sa_data[14];
 
@@ -47,9 +48,9 @@ bind(serv_sock, (struct sockaddr*) &serv_addr, sizeof(serv_addr));
 
 * BIG Endian = **Network Byte order**
 When we store "0x12345678"
-|0x20|0x21|0x22|0x23|
-|-----|----|---|----:|
-| 0x12| 0x34| 0x56| 0x78 |
+0x20|0x21|0x22|0x23
+-----|----|---|----
+ 0x12| 0x34| 0x56| 0x78
 0x78 is LSB, MSB 0x12 is stored at lowest address.    
 
 * Endian conversion
