--- a/_posts/2018-09-06-socket2.md
+++ b/_posts/2018-09-06-socket2.md
@@ -40,9 +40,10 @@ bind(serv_sock, (struct sockaddr*) &serv_addr, sizeof(serv_addr));
 
 // 2nd parameter, serv_addr(sock_addr_in) is type casted to sockaddr
 // bind funtion 2nd param require sa_data[14] with port number and ip address.
-//But it is not convenient to fill with these information
+// But it is not convenient to fill with these information
 // so we use sockaddr_in for fill it.
-// sin_port(2 byte) + sin_addr(4bypte) = 6 byte. sin_zero is 8 byte. sum of those is 14 byte, it is the same with sa_data[14];
+// sin_port(2 byte) + sin_addr(4bypte) = 6 byte. sin_zero is 8 byte.
+// sum of those is 14 byte, it is the same with sa_data[14];
 
 ```
 
@@ -57,7 +58,7 @@ When we store "0x12345678"
 ```cpp
 unsigned short htons(unsigned short);  // convert data to network byte from host data type.
 unsigned short ntohs (unsigned short); // convert data to host type from network byte type.
-unsigned long htonl (unsigend long);
+unsigned long htonl (unsigned long);
 unsigned long ntohl (unsigned long);
 ```
 
