--- a/_posts/2017-09-06-cpp-1.md
+++ b/_posts/2017-09-06-cpp-1.md
@@ -1,29 +1,75 @@
 ---
+리눅스를 사용하면서 알게된 팁.
+리눅스를 사용하면서 알게된 팁.
 layout: post
-title: "CPP 메모리"
-description: "cpp memory관련 메모"
+title: "CPP 연습 (1)"
+description: "cpp 연습"
 date: 2017-09-06
 tags: [cpp]
 comments: false
 share: false
 ---
 
-리눅스를 사용하면서 알게된 팁.
 
---- 
+##### 6.2.3 클래스 크기
+```cpp
+#include <iostream>
 
-## 1. shared pointer
+using namespace std;
 
-**segmentation fault** 가 발생하면 당황하게 되는데 이때 당황하지 말고 **gdb**를 이용해서 확인해 보자.
-> 어느분 말씀으론 인류가 정복하기 힘든 세가지가 linux kernel, vi editor, gdb 라고 하는데...
+class CEmpty {
+public:
+    CEmpty(){};
+    ~CEmpty(){};
+};
 
-segmentation fault가 발생하면 다음 순서로 진행을 해보자
-* dump size를 크게 잡기
-* core 와 binary 올리기
-* backtrace 보기
-* f #n 으로 원하는 프레임으로 이동하기
-* p val로 변수 값 확인해 보기
+class CVirtualEmpty {
+public:
+    CVirtualEmpty(){};
+    virtual ~CVirtualEmpty(){};
+};
 
-## 2. unique pointer
+int main()
+{
+    cout<<sizeof(CEmpty)<<endl;
+    cout<<sizeof(CVirtualEmpty)<<endl;
+    return 0;
+}
+```
+실행결과는 1,4가 나온다.
+멤버가 없는 클래스라고 하더라도 메모리 어딘가를 점유해야 하므로 1바이트가 잡히고, 
+가상함수가 하나라도 있는 경우엔 ==vfptr==이 생성되므로 4바이트가 잡히게 된다. 
+==sizeof== 의 경우 런타임에 실행되는 것이 아니라 컴파일 시점에 이미 계산되기 때문에 성능에 영향을 주지 않는다.
 
-## 3. weak pointer
+
+##### 6.3.1 암시적인 생성자와 소멸자
+
+코드상에서 명시적으로 생성자가 선언되어 있지 않더라도 생성자가 필요한 경우 컴파일러는 암시적인 생성자/소멸자를 생성한다.  
+(최신 컴파일러는 쓸데없는 암시적 생성자/소멸자를 생성하지 않는다.)
+
+```cpp
+class CTestP3 {
+    public: int data;
+};
+class CTest3: public CTestP3 {
+    public: int data;
+}
+```
+
+P 클래스와 D 클래스 모두 생성자가 없다. 컴파일러는 생성자를 만들지 않는다.
+
+```cpp
+class CTestP5 {
+public: 
+    CTestP5(){} 
+    int data;
+};
+class CTest5: public CTestP5 {
+    public: int data;
+}
+```
+D 클래스에는 생성자가 없지만 P 클래스에 생성자가 있다. 생성자가 있으므로 P 클래스의 생성자는 호출되어야 하는데  
+자식 클래스인 D 클래스의 생성자에서 P 클래스의 생성자를 호출해야 한다. 
+따라서 D 클래스의 생성자를 컴파일러가 만들어 준다. 일반적으로 P 클래스의 생성자 -> D 클래스의 생성자 순서로 호출 된다고 생각되지만, 실제는 D 클래스 생성자가 P 클래스의 생성자를 호출해 주게 된다.
+소멸자도 동일한 방식이다. 
+
