--- a/_posts/2019-07-20-python_00.md
+++ b/_posts/2019-07-20-python_00.md
@@ -1,13 +1,13 @@
 ---
 layout: post
-title: "python (style)"
+title: "python (style, scope)"
 description: "python style study"
 date: 2019-07-20
 tags: [python]
 comments: false
 share: false
 ---
-python style (1)
+### Python style
 
 ```python
 def main():
@@ -25,8 +25,9 @@ def main():
 if __name__ == "__main__":
     main()
 ```
-PEP8의 프로그래밍 권고에 따르면, boolean 을 비교할때는 == 를 사용하지 않는 것을 권고함. 게다가 __is__ 를 사용하는 경우 'Euqality vs Identity'에 따라서 원하는 결과가 안나올 수 있음  
+> PEP8의 프로그래밍 권고에 따르면, boolean 을 비교할때는 == 를 사용하지 않는 것을 권고함. 게다가 __is__ 를 사용하는 경우 'Euqality vs Identity'에 따라서 원하는 결과가 안나올 수 있음  
 
+### Python scope (1)
 
 ```python
 msg = "Hello"
@@ -45,9 +46,8 @@ if __name__ ==  "__main__":
     read_exception()
 
 ```
-read_exception( )에서 exception 이 발생하게 되는데,  
-_UnboundLocalError: local variable 'msg' referenced before assignment_
- read_exception( )에서 사용하는 변수 msg 는 global 로 선언된 msg 가 아닌 read_exception( )에서 새로 만들어진 지역 변수 이기 때문에 선언하기 이전에 print( )를 하고 있는 것.
+>read_exception( )에서 exception 이 발생하게 되는데,  
+"_UnboundLocalError: local variable 'msg' referenced before assignment_"   왜냐면, read_exception( )에서 사용하는 변수 msg 는 global 로 선언된 msg 가 아닌 read_exception( )에서 새로 만들어진 지역 변수 이기 때문에 선언하기 이전에 print( )를 하고 있는 것.
 
 
 
@@ -69,4 +69,40 @@ if __name__ ==  "__main__":
     read_exception()
 ```
 
-이 문제를 해결하기 위해서 read_exception( )에서 **global** 을 추가하여 msg 는 global 변수라고 설정함.
+> 이 문제를 해결하기 위해서 read_exception( )에서 **global** 을 추가하여 msg 는 global 변수라고 설정함.
+
+### Python scope (2)
+
+```python
+def greeting(name):
+    greeting_msg = "Hello "
+    
+    def add_name():
+        greeting_msg += " ! "
+        return ("%s%s" % (greeting_msg, name))
+
+    msg = add_name()
+    print(msg)
+
+if __name__ == "__main__":
+    greeting("python")
+```
+
+> nested function 을 사용한 경우인데, add_name( )에서 greeting_msg 를 변경하면 exception이 발생함  
+
+```python
+def greeting(name):
+    greeting_msg = "Hello "
+    
+    def add_name():
+        nonlocal greeting_msg
+        greeting_msg += " ! "
+        return ("%s%s" % (greeting_msg, name))
+
+    msg = add_name()
+    print(msg)
+
+if __name__ == "__main__":
+    greeting("python")
+```
+> **nonlocal**을 추가하여 greeting_msg를 선언해줌
