update high order

--- a/_posts/2019-07-20-python_00.md
+++ b/_posts/2019-07-20-python_00.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: "python (style, scope)"
-description: "python style study"
+title: "python (style, scope, basic)"
+description: "python basic study"
 date: 2019-07-20
 tags: [python]
 comments: false
@@ -47,7 +47,7 @@ if __name__ ==  "__main__":
 
 ```
 >read_exception( )에서 exception 이 발생하게 되는데,  
-"_UnboundLocalError: local variable 'msg' referenced before assignment_"   왜냐면, read_exception( )에서 사용하는 변수 msg 는 global 로 선언된 msg 가 아닌 read_exception( )에서 새로 만들어진 지역 변수 이기 때문에 선언하기 이전에 print( )를 하고 있는 것.
+"_UnboundLocalError: local variable 'msg' referenced before assignment_"   왜냐면, read_exception( )에서 사용하는 변수 msg 는 global 로 선언된 msg 가 아닌 read_exception( )에서 새로 만들어진 지역 변수 이기 때문에 선언하기 이전에 print( )를 하고 있는 것.  read_exception() 함수에서 'msg'를 출력하는 것은 문제가 아니지만 read_exception() 함수에서 msg를 선언하고 있기 때문에 'global msg'는 참조하지 않게 됨.
 
 
 
@@ -106,3 +106,99 @@ if __name__ == "__main__":
     greeting("python")
 ```
 > **nonlocal**을 추가하여 greeting_msg를 선언해줌
+  
+
+### First-Class Function
+  
+```python
+def square(x):
+    return x*x
+def main():
+    print("Function call")
+    print(square(10))
+    print("Assign value")
+    f = square
+    print(f(10))
+if __name__ == "__main__":
+    main()
+```
+> square 함수를 'f'라는 변수에 넣는 것도 가능
+
+``` python
+def square(x):
+    return x*x
+def bind(func,arg_list):
+    result = []
+    for arg in arg_list:
+        result.append(func(arg))
+    return result
+def main():
+    arg_list = [5,10]
+    squares = bind(square,arg_list)
+    print(squares)
+if __name__=="__main__":
+    main()
+ ```
+ > square 함수를 다른 함수의 인자로 전달하는 것도 가능. 함수를 하나의 개체로 보고 매개변수로 전달하고 반환값으로도 사용할 수 있음.
+
+ ### High-Order Function
+ ``` python
+ LOWER_LIST = ["python", "python2","python3"]
+UPPER_LIST = []
+
+def convert():
+    for data in LOWER_LIST:
+        UPPER_LIST.append(data.upper())
+
+def main():
+    convert()
+    print(LOWER_LIST)
+    print(UPPER_LIST)
+if __name__=="__main__":
+    main()
+ ```
+   
+> 입력받은 소문자를 대문자로 변경할때. 보통 이렇게 함수를 작성하는데, High-Order Function을 사용하게 되면,  
+``` python
+LOWER_LIST = ["python", "python2","python3"]
+UPPER_LIST = []
+
+def convert(data):
+    return data.upper()
+
+def main():
+    UPPER_LIST = list(map(convert, LOWER_LIST))
+    print(LOWER_LIST)
+    print(UPPER_LIST)
+if __name__=="__main__":
+    main()
+```
+> 내장함수인 **map**을 사용하여, 첫번째 매개변수인 함수와 두번째 매개변수인 리스트를 매핑애서 새로운 결과를 만듬. map 함수로 리턴되는 type은 **map** 임.
+
+ ### Nested Function
+> 내부 함수(inner function)은 외부 함수(outer function)이 메모리에 접근이 가능한데, 정확하게 말하면 외부 함수의 메모리를 복사해서 가지고 있는 것임. 그리고 내부 함수는 외부(외부 함수 아닌)에서 접근할수가 없음
+
+``` python
+def calculator(x,y):
+    def add():
+        return x+y
+    def sub():
+        return x-y
+    return (add(),sub())
+if __name__ == "__main__":
+    print(calculator(10,5))
+```
+> nested function의 간단한 예.
+
+``` python
+def calculator(x):
+    def add(y):
+        return x+y
+    return add
+
+if __name__ == "__main__":
+    f = calculator(10)
+    print(f(5))
+    print(f(10))
+```
+> 외부 함수를 변수 **f**에 할당하는데 이때 전달인자로 **10**을 전달함. 그런데 **f**에는 외부 함수의 반환값인 **add**가 할당됨. 이렇게 구현된 거승ㄹ **클로저(closure)**라고 부름
