--- a/_posts/2019-07-20-python_00.md
+++ b/_posts/2019-07-20-python_00.md
@@ -141,7 +141,7 @@ if __name__=="__main__":
  ```
  > square 함수를 다른 함수의 인자로 전달하는 것도 가능. 함수를 하나의 개체로 보고 매개변수로 전달하고 반환값으로도 사용할 수 있음.
 
- ### High-Order Function
+ ### High-Order Function  
  ``` python
  LOWER_LIST = ["python", "python2","python3"]
 UPPER_LIST = []
@@ -175,9 +175,9 @@ if __name__=="__main__":
 ```
 > 내장함수인 **map**을 사용하여, 첫번째 매개변수인 함수와 두번째 매개변수인 리스트를 매핑애서 새로운 결과를 만듬. map 함수로 리턴되는 type은 **map** 임.
 
- ### Nested Function
+ ### Nested Function  
 > 내부 함수(inner function)은 외부 함수(outer function)이 메모리에 접근이 가능한데, 정확하게 말하면 외부 함수의 메모리를 복사해서 가지고 있는 것임. 그리고 내부 함수는 외부(외부 함수 아닌)에서 접근할수가 없음
-
+  
 ``` python
 def calculator(x,y):
     def add():
@@ -187,9 +187,11 @@ def calculator(x,y):
     return (add(),sub())
 if __name__ == "__main__":
     print(calculator(10,5))
-```
+```  
+
 > nested function의 간단한 예.
 
+  
 ``` python
 def calculator(x):
     def add(y):
@@ -201,4 +203,5 @@ if __name__ == "__main__":
     print(f(5))
     print(f(10))
 ```
-> 외부 함수를 변수 **f**에 할당하는데 이때 전달인자로 **10**을 전달함. 그런데 **f**에는 외부 함수의 반환값인 **add**가 할당됨. 이렇게 구현된 거승ㄹ **클로저(closure)**라고 부름
+  
+> 외부 함수를 변수 **f**에 할당하는데 이때 전달인자로 **10**을 전달함. 그런데 **f**에는 외부 함수의 반환값인 **add**가 할당됨. 이렇게 구현된 것을 **Closure**라고 부름
