--- a/_posts/2019-07-20-python_00.md
+++ b/_posts/2019-07-20-python_00.md
@@ -208,3 +208,6 @@ if __name__ == "__main__":
 ```
   
 > 외부 함수를 변수 **f**에 할당하는데 이때 전달인자로 **10**을 전달함. 그런데 **f**에는 외부 함수의 반환값인 **add**가 할당됨. 이렇게 구현된 것을 **Closure**라고 부름
+
+  
+update(2019-07-21)
