--- a/_posts/2019-07-20-python_00.md
+++ b/_posts/2019-07-20-python_00.md
@@ -209,6 +209,43 @@ if __name__ == "__main__":
 ```
   
 > 외부 함수를 변수 **f**에 할당하는데 이때 전달인자로 **10**을 전달함. 그런데 **f**에는 외부 함수의 반환값인 **add**가 할당됨. 이렇게 구현된 것을 **Closure**라고 부름
+  
+
+### Closure  
+
+> closure를 언제 사용하나?  
+> 1. **global 변수를 사용하고 싶지 않을때.** global 변수의 역할을 nonlocal 변수가 대신하고, nonlocal 변수를 사용하면 데이터를 숨길 수가 있음 !
+> 2. **class를 사용하지 않기 위해.** 객체지향에서 모든 로직에 대해 클래스와 멤버 함수를 만드는 것은 비 효율적임. 다루는 변수가 많지 않은 경우 클래스로 만드는 것보다는 함수로 만들고, 그리고 클로져로 구현하는 것이 좋음.
+> 3. **decorator**를 사용하기 위해. design pattern의 decorator와는 다른 것인데, 어떤 함수를 실행하기 전이나 실행하고 난 뒤에 특정 기능을 수행하기 위한 기능임.
+  
+``` python
+def closure():
+    x = 10
+    y = 20
+    
+    def inner():
+        z = 20
+        return x+y+z
+    return inner
+
+if __name__ == "__main__":
+    p = closure()
+    print(len(p.__closure__))
+    print(p.__closure__[0].cell_contents)
+    print(p.__closure__[1].cell_contents)
+    print(p)
+    print(dir(p))
+```
+
+> 위 예제를 실행하면 다음과 같이 출력됨. closure를 통해 inner( )가 반환되는데, p 에는 'closure'라는 속성이 포함되어 있고, nonlocal 변수의 값 10,20을 가지고 있음.  
+2  
+10  
+20  
+<function closure.<locals>.inner at 0x7f83901b4048>  
+['__annotations__', '__call__', '__class__', '__closure__', '__code__', '__defaults__', '__delattr__', '__dict__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__get__', '__getattribute__', '__globals__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__kwdefaults__', '__le__', '__lt__', '__module__', '__name__', '__ne__', '__new__', '__qualname__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__']
+'''
 
   
-update(2019-07-21)
+> 클로져에서 외부함수의 변수들인 nonlocal 변수는 외부 함수가 실행되는 시점에 생성되고 복사되어 내부함수의 **__closure__** 속성에 저장되는데, nonlocal 변수에는 시간의 흐름에 따라 변하는값을 저장하면 안됨. 
+
+update(2019-07-22)
