--- a/_posts/2019-07-20-python_00.md
+++ b/_posts/2019-07-20-python_00.md
@@ -216,7 +216,7 @@ if __name__ == "__main__":
 > closure를 언제 사용하나?  
 > 1. **global 변수를 사용하고 싶지 않을때.** global 변수의 역할을 nonlocal 변수가 대신하고, nonlocal 변수를 사용하면 데이터를 숨길 수가 있음 !
 > 2. **class를 사용하지 않기 위해.** 객체지향에서 모든 로직에 대해 클래스와 멤버 함수를 만드는 것은 비 효율적임. 다루는 변수가 많지 않은 경우 클래스로 만드는 것보다는 함수로 만들고, 그리고 클로져로 구현하는 것이 좋음.
-> 3. **decorator**를 사용하기 위해. design pattern의 decorator와는 다른 것인데, 어떤 함수를 실행하기 전이나 실행하고 난 뒤에 특정 기능을 수행하기 위한 기능임.
+> 3. **decorator를 사용하기 위해**. design pattern의 decorator와는 다른 것인데, 어떤 함수를 실행하기 전이나 실행하고 난 뒤에 특정 기능을 수행하기 위한 기능임.
   
 ``` python
 def closure():
@@ -238,14 +238,102 @@ if __name__ == "__main__":
 ```
 
 > 위 예제를 실행하면 다음과 같이 출력됨. closure를 통해 inner( )가 반환되는데, p 에는 'closure'라는 속성이 포함되어 있고, nonlocal 변수의 값 10,20을 가지고 있음.  
-2  
+>> 2  
 10  
 20  
-<function closure.<locals>.inner at 0x7f83901b4048>  
+> <function closure.<locals>.inner at 0x7f83901b4048>  
 ['__annotations__', '__call__', '__class__', '__closure__', '__code__', '__defaults__', '__delattr__', '__dict__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__get__', '__getattribute__', '__globals__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__kwdefaults__', '__le__', '__lt__', '__module__', '__name__', '__ne__', '__new__', '__qualname__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__']
 '''
 
   
 > 클로져에서 외부함수의 변수들인 nonlocal 변수는 외부 함수가 실행되는 시점에 생성되고 복사되어 내부함수의 **__closure__** 속성에 저장되는데, nonlocal 변수에는 시간의 흐름에 따라 변하는값을 저장하면 안됨. 
 
+
+### Partial Application
+  
+여러개의 매개 변수를 갖는 함수에서 일부 매개 변수가 고정일때 매번 매개 변수를 전달하는 것은 비효율적임. 그래서 매개변수의 일부를 미리 wrapping 함수로 만들고, 가변적인 매개 변수만 매개 변수로 사용하는 기법!  
+  
+#### python의 매개 변수 (*args vs **kwargs) 처리 방법
+  
+args, kwargs가 중요한 것은 아니고 *, ** 가 중요한 것인데, args=arguments, kwargs=keyword arguments를 의미.  
+그럼 차이는? args는 non keyword arguments를 처리하게 된다. 다음 예제를 보면,  
+  
+``` python
+def args_test(*args):
+    print('== args list ==')
+    for arg in args:
+        print('%s' % arg)
+
+def kwargs_test(**kwargs):
+    print('== kwargs list==')
+    for keyword, arg in kwargs.items():
+        print('%s : %s' % (keyword, arg))
+
+def main():
+    args = ['red', 'blud', 'first', 'second']
+    kwargs = {'red':'color', 'blue':'color','first':'number','second':'number'}
+    
+    args_test(*args)
+    kwargs_test(**kwargs)
+
+if __name__ == "__main__":
+    main()
+```
+
+> *args는 리스트로 전달하면 되고, **kwargs는 사전형으로 전달하면 됨  
+
+#### closure를 이용한 partial application  
+``` python
+## partial application
+
+def partial(func, *partial_args):
+    
+    def wrapper(*extra_args):
+        args = list(partial_args)
+        args.extend(extra_args)
+    
+        return func(*args)
+    return wrapper
+
+def logging(year, month, day, title, content):
+    print('%s-%s-%s %s:%s' % (year, month, day, title, content))
+
+def main():
+    print('== use logging function ==')
+    logging('2019','07','22','python','Hello World')
+    
+    print('== usr partial function ==')
+    f = partial(logging, '2019','07','23')
+    f('Rust','Hello World')
+    
+if __name__ == "__main__":
+    main()
+```
+  
+> partial 이란 함수가 있는데, 내부에 wrapper 란 함수가 있고 반환값으로 내부 함수를 사용하고 있음. 즉 closure 임.  
+처음 closure를 선언할때 가변인자인 partial_args를 전달 받고, closure를 사용할때에 또다른 가변인자닌 extra_args를 전달 받고 있음.  
+결국엔 closure를 선언할때 받은 가변인자와 closure를 사용할때 받은 가변인자를 하나의 리스트로 만들어서 함수를 호출하게 됨.  
+  
+#### python 내장 모듈을 이용한 partial application
+
+``` python
+
+from functools import partial
+
+def logging(year, month, day, title, content):
+    print('%s-%s-%s %s:%s' % (year, month, day, title, content))
+
+def main():
+    print('== use logging function ==')
+    logging('2019','07','22','python','Hello World')
+    
+    print('== usr partial function ==')
+    f = partial(logging, '2019','07','23')
+    f('Rust','Hello World')
+    
+if __name__ == "__main__":
+    main()
+```
+> partial application을 구현하기 위해서는 higher-order function을 지원해야 하는데, 이미 functools을 통해서 지원하고 있음. 
+  
 update(2019-07-22)
