--- a/_posts/2019-07-23-python_01.md
+++ b/_posts/2019-07-23-python_01.md
@@ -69,7 +69,29 @@ if __name__ == "__main__":
 ```
 > 반복문의 index가 필요한 경우 자동으로 index를 만들어 줌. **enumurate** 를 통해 반환되는 타입은 tuple.  
   
-  
+### 데코레이터 (Decorator)
+
+``` python
+## decorator
+def deco(func):
+
+    def wrapper():
+        print("before")
+        ret = func()
+        print("after")
+        return ret
+    return wrapper
+
+@deco
+def base():
+    print("base function")
+
+if __name__ == "__main__":
+    base()
+```
+
+> 1. Closure 형태로 **deco** 함수를 선언하고 반환 값으로 내부 함수인 **wrapper**를 반환함.
+> 2. **@deco**란것이 base( )함수 위에 있는데, 이것이 **decorator** 임.
 
 
 update(2019-07-23. 출처:파이썬답게 코딩하기)
