--- a/_posts/2019-07-23-python_01.md
+++ b/_posts/2019-07-23-python_01.md
@@ -88,10 +88,51 @@ def base():
 
 if __name__ == "__main__":
     base()
+
+    #이렇게도 부를 수 있음.
+    deco(base)()
+
+    #아니면 이렇게.
+    argument = base
+    f = deco(argument)
+    f()
 ```
 
 > 1. Closure 형태로 **deco** 함수를 선언하고 반환 값으로 내부 함수인 **wrapper**를 반환함.
 > 2. **@deco**란것이 base( )함수 위에 있는데, 이것이 **decorator** 임.
+
+
+### Decorator의 사용
+
+``` python
+## measure run time with decorator
+
+import time
+
+def measure_run_time(func):
+   
+    def wrapper(*args, **kwargs):
+        start = time.time()
+        result = func(*args, **kwargs)
+        end = time.time()
+        print("%s function running time : %s" % (func.__name__, end - start))
+        return result
+    return wrapper
+
+@measure_run_time
+def worker(delay_time):
+    time.sleep(delay_time)
+
+@measure_run_time
+def add(a,b):
+    print(a+b)
+
+
+if __name__ == "__main__":
+    worker(1)
+    add(10,20)
+```  
+> Decorator를 이용하여, 특정 함수의 실행 시간을 확인할 수 있음. 여기서 특이한 것은 클로저를 선언할 때, *args와 **kwargs를 통해 가변인자를 전달 받도록 되어 있음
 
 
 update(2019-07-23. 출처:파이썬답게 코딩하기)
