--- a/_posts/2019-07-25-python_02.md
+++ b/_posts/2019-07-25-python_02.md
@@ -103,10 +103,139 @@ StopIteration:
 
 ### Generator
 
-> Generator의 사전적인 정의는 '루프의 반복 동작을 제어하는 특수한 함수' 라고 함. 그리고 파이썬에서는 '제네레이터는 이터레이터를 반환하고 yield 구문을 포함하는 함수(python2)'라고 되어 있음. python3는 '제네레이터는 제네레이터 이터레이터를 반환하는 함수' 라고 정의하고 있음 (무슨 말인지.)
+> Generator의 사전적인 정의는 '루프의 반복 동작을 제어하는 특수한 함수' 라고 함. 그리고 파이썬에서는 '제너레이터는 이터레이터를 반환하고 yield 구문을 포함하는 함수(python2)'라고 되어 있음. python3는 '제너레이터는 제너레이터 이터레이터를 반환하는 함수' 라고 정의하고 있음 (무슨 말인지.)
 
 #### Generator Iterator
+  
+> 일반적으로 '이터레이터'와 '제너레이터 이터레이터'를 혼용하지만 ('제너레이터 이터레이터'가 '이터레이터'의 속성을 가지고 있기 때문)
 
+>* 이터레이터의 **next**는 'Container'에 있는 다음 항목을 반환.
+>* 제너레이터의 **next**는 제너레이터 함수를 실행하거나 마지막 실행된 yield구문에서 다시 시작.
 
+> 이터레이터와 제너레이터 모두 값을 한번에 하나씩 반환하지만, 이터레이터는 값을 모두 연산한 다음에 하나씩 반환하고, 제너레이터는 값을 반환할 때마다 연산을 수행함. 
+즉 이터레이터는 연산된 결과가 메모리에 모두 들어가 있는 반면 제너레이터는 연산을 수행하기 직전의 상태로 멈춰 있음. (range와 xrange의 메모리 크기가 다른 이유가 됨)  
+그럼 제너레이터가 이런 특징을 갖는 것은 **yield** 구문을 지원하기 때문임.  
+
+#### Yield
+  
+``` python
+# return yield
+
+def gen():
+    yield 1
+    yield 2
+    yield 3
+
+def normal():
+    return 1
+    return 2
+    return 3
+
+def main():
+    print("== gen == ")
+    print(gen())
+
+    print("== normal == ")    
+    print(normal())
+
+    print("=== print gen loop ===")
+    for g in gen():
+        print(g)
+
+    print("=== print normal loop ===")
+    for n in normal():
+        print(n)
+        
+if __name__ == "__main__":
+    main()
+    
+```
+
+> 아래와 같은 결과를 얻을 수 있음. 
+
+``` bash
+== gen == 
+<generator object gen at 0x000000000614CC78>
+== normal == 
+1
+=== print gen loop ===
+1
+2
+3
+=== print normal loop ===
+<ipython-input-39-41ce018a3016> in main()
+     20         print(g)
+     21     print("=== print normal loop ===")
+---> 22     for n in normal():
+     23         print(n)
+     24 
+
+TypeError: 'int' object is not iterable
+```
+
+> 제너레이터는 값이 반환되지 않고 객체 자체가 반환되고, for loop를 사용하는 경우 yield 통해서 반환값을 모두 출력할 수 있음. 하지만 일반 함수에서는 반복뭉에서 오류가 발생하는데, 일반 함수는 iterable 하지 않기 때문임.    
+  
+> 제너레이터는 제너레이터 이터레이터를 반환하는 함수라고 했는데, 그래서 for 문을 사용할 수 있고, gen( )함수를 곧바로 호출 했을때 값이 리턴되지 않고 개체가 리턴되는 것은 next함수를 사용하지 않았기 때문임. 결국 제너레이터를 동작 시키기 위해서는 next 함수를 불러야 하는데 for 문에서는 내부적으로 next를 불러주고 있는 것임.  
+  
+   
+ ---
+
+#### Send 
+
+yield를 통해서 값을 입력 받을 수도 있음
+``` python
+# input_yield
+
+def gen():
+    value = 2
+    
+    while True:
+        print (value)
+        value = yield
+
+def main():
+    g = gen()
+    
+    next(g)
+    g.send(3)
+    g.send(5)
+
+if __name__ == "__main__":
+    main()
+```
+  
+실행하면 2,3,5 순차적으로 출력되는데, 처음에 지역 변수 2를 할당하고 그 다음에 3과5를 전달함. 제너레이터에서는 yield를 사용해서 함수가 실행되는 도중에 값을 전달할 수 있음
+
+``` python
+# yield
+
+def gen():
+    value = 1
+    while True:
+        value = yield value
+
+def main():
+    
+    g = gen()
+    print (next(g))
+    print (g.send(2))
+    print (g.send(10))
+    print (g.send(5))
+    print (next(g))
+
+if __name__ == "__main__":
+    main()
+```
+
+실행 결과는 다음과 같음
+``` bash
+1
+2
+10
+5
+None
+None
+```
+> yield로 값을 반환하는 동시에 할당하고 있는데, 값이 먼저 반환되고 입력받은 값을 다시 value에 할당하고 있는 것임. 실행 결과를 보면 처음 할당한 1이 먼저 출력되고, send로 보낸 값들이 출력됨. 마지막에는 send하지 않고 next를 호출해서 None이 출력됨
 
 update(2019-07-25. 출처:파이썬답게 코딩하기)
