change source reference

--- a/_posts/2019-07-20-python_00.md
+++ b/_posts/2019-07-20-python_00.md
@@ -339,4 +339,4 @@ if __name__ == "__main__":
 
 
   
-update(2019-07-22. 출처:파이썬답게 코딩하기)
+update: 2019-07-22. 출처:[파이썬답게 코딩하기](https://www.aladin.co.kr/shop/wproduct.aspx?ItemId=143094231)
