--- a/_posts/2019-07-23-python_01.md
+++ b/_posts/2019-07-23-python_01.md
@@ -254,4 +254,4 @@ if __name__ == "__main__":
 
 > &#95;&#95;init&#95;&#95;은 클래스의 생성자인데, &#95;&#95;call&#95;&#95;은 클래스를 함수처럼 사용할때 사용함.
 
-update(2019-07-23. 출처:파이썬답게 코딩하기)
+update : 2019-07-23. 출처:[파이썬답게 코딩하기](https://www.aladin.co.kr/shop/wproduct.aspx?ItemId=143094231)
