--- a/_posts/2019-07-25-python_02.md
+++ b/_posts/2019-07-25-python_02.md
@@ -238,4 +238,30 @@ None
 ```
 > yield로 값을 반환하는 동시에 할당하고 있는데, 값이 먼저 반환되고 입력받은 값을 다시 value에 할당하고 있는 것임. 실행 결과를 보면 처음 할당한 1이 먼저 출력되고, send로 보낸 값들이 출력됨. 마지막에는 send하지 않고 next를 호출해서 None이 출력됨
 
-update(2019-07-25. 출처:파이썬답게 코딩하기)
+#### Stateful Generator
+
+yield를 통해서 제너레이터에서 값을 반환하고 전달할 수 있는데, 그러면 어떻게 그 상태를 저장할 수 있는 것인지???  
+
+``` python
+# generator
+
+def gen(items):
+    count = 0
+    
+    for item in items:
+        if count == 10:
+            return -1
+        count +=1
+        yield item
+        
+if __name__ == "__main__":
+    for i in gen(range(15)):
+        print(i,end = ' ')
+```
+
+> 위 예제를 실행하면 다음과 같다.  
+`0 1 2 3 4 5 6 7 8 9 ` 
+
+
+  
+update : 2019-07-25. 출처:[파이썬답게 코딩하기](https://www.aladin.co.kr/shop/wproduct.aspx?ItemId=143094231)
