--- a/_posts/2019-07-25-python_02.md
+++ b/_posts/2019-07-25-python_02.md
@@ -261,7 +261,102 @@ if __name__ == "__main__":
 
 > 위 예제를 실행하면 다음과 같다.  
 `0 1 2 3 4 5 6 7 8 9 ` 
+> count가 9 이하일때는 제너레이터로서 next 함수가 호출 될때마다 반환이 일어나는데, count가 10이 되면 return으로 -1이 반환되면서 제너레이터가 종료됨.  
+
+> 그런데 마지막 반환값은 -1 은 출력되지 않고, StopIteration 예외도 발생하지 않음.
 
 
-  
+### List Comprehension
+
+comprehension은 list, set, dict 같은 자료에 사용하는데, 같은 개념인 expression은 Generator에 대해서 사용함.
+
+``` python
+# List comprehension
+
+v_list = [1,2,3]
+v_dict_key = ['korea', 'japan','china']
+v_dict_value = [82,81,86]
+
+def print_list():
+    va_list_comprension = [x*x for x in v_list]
+    print ( va_list_comprension)
+
+def print_dict():
+    v_dict_comprehension = {k:v for k,v in zip(v_dict_key, v_dict_value)}
+    print(v_dict_comprehension)
+
+if __name__ == "__main__":
+    print_list()
+    print_dict()
+```
+
+### Generator Expression
+
+``` python
+# expression
+
+SAMPLE = [1,2,3,4,5]
+
+def generate_sample_list():
+    result = (x*x for x in SAMPLE)
+    print (result)
+    return result
+
+def generate_list_by_range():
+    result  = ( i for i in range(10))
+    print (result)
+    return result
+
+def print_generator(items):
+    for item in items:
+        print(item,end= ' ')
+
+if __name__ == "__main__":
+    print_generator(generate_sample_list())
+    print()
+    print_generator(generate_list_by_range())
+```
+> comprehension과 다르게 `[]` 가  아닌 `()`를 사용하고 있음
+
+
+### Lazy Evaluation
+
+``` python
+# Lazy Evaluation
+
+import time
+
+def wait_return(num):
+    print ("sleep",end = ' ')
+    time.sleep(0.5)
+    return num
+
+def print_items(items):
+    for i in items:
+        print (i, end= ' ')
+    print()
+
+def main():
+    print("== print list comprehension ===")
+    iterator_list = [wait_return(i) for i in range(10)]
+    print_items(iterator_list)
+    
+    print("== print generator expression ===")
+    iterator_list = (wait_return(i) for i in range(10))
+    print_items(iterator_list)
+    
+if __name__ == "__main__":
+    main()
+```
+
+위 예제를 실행하면 다음과 같음
+``` bash
+== print list comprehension ===
+sleep sleep sleep sleep sleep sleep sleep sleep sleep sleep 0 1 2 3 4 5 6 7 8 9 
+== print generator expression ===
+sleep 0 sleep 1 sleep 2 sleep 3 sleep 4 sleep 5 sleep 6 sleep 7 sleep 8 sleep 9 
+```
+> generator expression의 경우 wait_return 함수가 리스트를 만드는 시점에 호출되는 것이 아니라 실제로 값을 출력하는 print_items 함수에서 값을 사용할때 실행됨.
+
+
 update : 2019-07-25. 출처:[파이썬답게 코딩하기](https://www.aladin.co.kr/shop/wproduct.aspx?ItemId=143094231)
