--- a/_posts/2019-07-26-python_03.md
+++ b/_posts/2019-07-26-python_03.md
@@ -87,8 +87,6 @@ if __name__ == "__main__":
 > 2. 생성자에서 상속받은 `threading.Thread`의 생성자를 호출
 > 3. run 메서드를 만들었는데, start( )를 호출하게 되면 내부적으로 run을 호출하게 됨
 
-> 하지만 **Iterator**는 값을 하나씩만 반환하는 개체임. 그래서 Iterable 하다고 해서 Iterator 가 되는 것은 아님.
-
 #### Thread Logging
 
 > python2에선 print 함수가 thread safe 한 함수가 아닌데, python3에선 thread safe 하도록 변경됨. 이를 위해 `logging` 모듈을 사용하는 것을 권장함
@@ -110,6 +108,15 @@ def main():
         
 if __name__ == "__main__":
     main()
+```
+> 실행 결과는 다음과 같다
+
+> ``` bash
+> (thread 0) 0
+> (thread 3) 3
+> (thread 2) 2
+> (thread 1) 1
+> (thread 4) 4
 ```
 
 #### Daemon Thread
@@ -137,8 +144,133 @@ def main():
 
 if __name__=="_main__":
     main()
+    print('end of main')
 ```
-> 위 예제를 실행하면 'Start' 란 메시지만 출력하고 종료됨. 'Exit'도 출력될 것을 기대했지만 그렇게 안되는데, 그 이유는 main process가 종료 되었기 때문임.
+> ~~위 예제를 실행하면 'Start' 란 메시지만 출력하고 종료됨. 'Exit'도 출력될 것을 기대했지만 그렇게 안되는데, 그 이유는 main process가 종료 되었기 때문임.~~ 
+  
+막상 실행해 보면 5초후에 'Exit'가 출력됨. `t.setDaemon(False)`로 해도 동일한 결과.  
+main 프로그램이 먼저 종료 되고, 5초후에 daemon thread가 종료됨
 
+``` bash
+(daemon) Start
+end of main
+(daemon) Exit
+``` 
+
+``` python
+# daemon thread with join
+
+import time
+import logging
+import threading
+
+logging.basicConfig(level=logging.DEBUG, format="(%(threadName)s) %(message)s")
+
+def daemon():
+    logging.debug("Start")
+    time.sleep(5)
+    logging.debug("Exit")
+    
+def main():
+    t = threading.Thread(name="daemon", target=daemon)
+    t.setDaemon(True)
+    t.start()
+    t.join()
+
+if __name__ == "__main__":
+    main()
+    print('end of main')
+```
+
+> join을 추가하면 아래와 같이 daemon thread가 종료된 이후에 main 프로그램이 종료됨.  
+즉 daemon thread가 종료될 때 까지 main 프로그램이 멈춰 있음
+
+``` bash
+(daemon) Start
+(daemon) Exit
+end of main
+```
+
+### Thead Event
+
+``` python
+# thread_event
+# thread_event
+
+import time
+import logging
+import threading
+
+logging.basicConfig(level=logging.DEBUG, format="(%(threadName)s) %(message)s")
+
+def first_wait(e1, e2):
+    while not e1.isSet():
+        event = e1.wait(1)
+        logging.debug("Event status : (%s)", event)
+        
+        if event:
+            logging.debug("e1 is set.")
+            time.sleep(3)
+            logging.debug("set e2")
+            e2.set()
+            
+def second_wait(e2):
+    while not e2.isSet():
+        event = e2.wait(1)
+        logging.debug("event status : (%s)", event)
+        
+        if event:
+            logging.debug("e2 is set")
+        
+def main():
+    e1 = threading.Event()
+    e2 = threading.Event()
+    
+    t1 = threading.Thread(name="first", target = first_wait, args=(e1,e2))
+    t1.start()
+    
+    t2 = threading.Thread(name="second", target=second_wait, args=(e2,))
+    t2.start()
+    
+    logging.debug("Wait ...")
+    time.sleep(5)
+    logging.debug("end fo sleep(5)")
+    logging.debug("Set e1")
+    e1.set()
+    time.sleep(5)
+    logging.debug("Exit")
+    
+if __name__ == "__main__":
+    main()
+```
+
+조금 복잡하지만 실행 결과는 다음과 같음.
+``` bash
+(MainThread) Wait ...
+(first) Event status : (False)
+(second) event status : (False)
+(first) Event status : (False)
+(second) event status : (False)
+(first) Event status : (False)
+(second) event status : (False)
+(first) Event status : (False)
+(second) event status : (False)
+(MainThread) end fo sleep(5)
+(MainThread) Set e1
+(first) Event status : (True)
+(first) e1 is set.
+(second) event status : (False)
+(second) event status : (False)
+(second) event status : (False)
+(first) set e2
+(second) event status : (True)
+(second) e2 is set
+(MainThread) Exit
+```
+> 1. main thread에서 thread event 객체를 만듬
+> 2. main thread에서 5초간 sleep 하지만, first thread와 second thread에서 각각 로그 출력
+> 3. first thread와 second thread에서 `wait(1)` 로 되어 있는데, 1초간 대기한 다음에 event의 값을 반환.
+> 4. 만약 `wait()`처럼 인자가 없다면 block 상태가 되고 event 가 발생할 때 까지 대기. 즉 While loop가 실행되지 않음
+> 5. e1 이 설정되면 first thread는 e2 를 설정하고 종료
 
 update : 2019-07-26. 출처:[파이썬답게 코딩하기](https://www.aladin.co.kr/shop/wproduct.aspx?ItemId=143094231)
